init: Fix trustkernel meta files using (create mirror)
Fix error for decrypt userdata in system load mode.

Fixed errors:
ERR KERN:tee_fs_common_open:2301: Secure file meta not found
ERR GATEKEEPER:GetRTCBaseline:130: Warning: No RTC baseline found or it's corrupted, rebuilding
ERR GATEKEEPER:GetRTCBaseline:148: Rebuild failed
ERR KERN:tee_fs_common_open:2301: Secure file meta not found
ERR GATEKEEPER:GetFailureRecord:493: Open failure record failed with 0xf0100001

--- a/jmax/recovery/root/init.recovery.mt6878.rc
+++ b/jmax/recovery/root/init.recovery.mt6878.rc
@@ -21,8 +21,9 @@ on fs
     mount ext4 /dev/block/by-name/persist  /mnt/vendor/persist   rw wait
     mount ext4 /dev/block/by-name/nvdata   /mnt/vendor/nvdata    rw wait
     mount ext4 /dev/block/by-name/nvcfg    /mnt/vendor/nvcfg     rw wait
-    mkdir /mnt/vendor/persist/t6    0755 system system
-    mkdir /mnt/vendor/protect_f/tee 0755 system system
+    mkdir /mnt/vendor/persist/t6_twrp    0755 system system
+    mkdir /mnt/vendor/protect_f/tee_twrp 0755 system system
+    exec u:r:recovery:s0 system -- /vendor/bin/init_trustkernel_twrp.sh
 
     install_keyring
     setprop crypto.ready 1 
