--- a/jmax/recovery/root/init.recovery.mt6878.rc
+++ b/jmax/recovery/root/init.recovery.mt6878.rc
@@ -32,6 +32,8 @@ on fs
     setprop crypto.ready 1 
 
 on post-fs
+    start boot-hal-1-2
+
     # Support A/B feature for EMMC and UFS boot region
     symlink /dev/block/sda /dev/block/mmcblk0boot0
     symlink /dev/block/sdb /dev/block/mmcblk0boot1
